ask attacker for attack card choices